# Diff-Drive-Robot-ROS2

./: README.md  diff_drive_bot.webm
action_py/: package.xml  setup.py
action_py/action_py/: actions_challenge_client.py  actions_challenge_server.py  count_until_client.py  count_until_server.py
actions_cpp/: CMakeLists.txt
activities/: CMakeLists.txt  package.xml
activities/src/: number_publisher.py
activity/: package.xml  setup.py
activity/activity/: batteryNode.py  ledPanelNode.py
components_cpp/: CMakeLists.txt
components_cpp/src/: number_publisher.cpp
components_py/components_py/: manual_composition.py  node1.py  node2.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lifecycle_py/lifecycle_py/: actions_challenge_server.py
log/: latest_build
my_cpp_package/: CMakeLists.txt  package.xml
my_cpp_package/src/: cpp_publisher.cpp  cpp_subscriber.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  py_publisher.py  py_subscriber.py
my_robot_bringup/: package.xml
my_robot_bringup/launch/: components.launch.py  display.launch.xml  my_robot_gazebo.launch.xml  number_app.launch.py  parent.launch.py
my_robot_bringup/rviz/: my_robot_config.rviz  robot_config.rviz  urdf_config.rviz
my_robot_bringup/worlds/: my_world.world
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: arm_display.launch.py  display.launch.py  display.launch.xml
my_robot_description/rviz/: my_robot_config.rviz
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf  my_robot.urdf.xacro  simple.urdf  standalone_arm.urdf.xacro
my_robot_interfaces/: CMakeLists.txt  package.xml
turtlesim_catch_them_all/: package.xml  setup.py
(+310 files in other folders)
